2007-03-24  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/overlay.d: -u symbols we want to see in the output.

2007-03-23  Alan Modra  <amodra@bigpond.net.au>

	* ld-spu/ovl.s (f4_a2): Tail call.
	* ld-spu/ovl.d: Add --emit-relocs to ld options, -r to objdump.
	Update expected results.

2007-03-23  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/ld-r-1.d: Update.
	* ld-sh/shared-1.d: Likewise.

2007-03-23  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/elf.exp: Add "--local-store 0:0" to LDFLAGS for spu.

2003-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4210
	* ld-pe/image_size.d: New file.
	* ld-pe/image_size.s: Likewise.
	* ld-pe/image_size.t: Likewise.

	* ld-pe/pe.exp: Run image_size.

2007-03-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4007
	* ld-elf/note-1.d: New file.
	* ld-elf/note-1.s: Likewise.
	* ld-elf/note-1.t: Likewise.
	* ld-i386/alloc.d: Likewise.
	* ld-i386/alloc.s: Likewise.
	* ld-i386/alloc.t: Likewise.

	* ld-i386/i386.exp: Run "alloc".

2007-03-20  Paul Brook  <paul@codesourcery.com>

	* ld-arm/arm-elf.exp (ld-arm/arm-elf.exp): Add arm-pic-veneer.
	* ld-arm/arm-pic-veneer.d: New test.
	* ld-arm/arm-pic-veneer.s: New test.

2007-03-08  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/extract-symbol-1.ld (data): Explicitly set the start address
	to 0.

2007-03-07  Alan Modra  <amodra@bigpond.net.au>

	* ld-elf/extract-symbol-1sec.d: xfail hppa.
	* ld-elf/extract-symbol-1sym.d: xfail hppa.

2007-03-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR 3958
	* ld-elf/linkonce1.d: New.
	* ld-elf/linkonce1a.s: New.
	* ld-elf/linkonce1b.s: New.
	* ld-elf/linkonce2.d: New.
	* ld-i386/pcrel16abs.d: New.
	* ld-i386/pcrel16abs.s: New.
	* ld-i386/i386.exp: Run it.

2007-03-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/4144
	* ld-elf/nobits-1.d: New file.
	* ld-elf/nobits-1.s: Likewise.
	* ld-elf/nobits-1.t: Likewise.

2007-03-02  Richard Sandiford  <richard@codesourcery.com>

	* ld-elf/binutils.exp: Revert last change.
